--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ universal = 1
 [flake8]
 exclude = docs
 max-line-length = 120
+ignore = E203, E266, E501, W503
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
 
 [aliases]
 # Define setup.py command aliases here
